--- a/themes/maupassant/layout/_partial/footer.pug
+++ b/themes/maupassant/layout/_partial/footer.pug
@@ -5,3 +5,5 @@
   a(rel='nofollow', target='_blank', href='https://github.com/tufu9441/maupassant-hexo')  Theme
   |  by
   a(rel='nofollow', target='_blank', href='https://github.com/pagecho')  Cho.
+  #busuanzi_container_site_pv= '本站总访问量' + ' '
+    #busuanzi_value_site_pv= '次'
