--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,11 +11,18 @@ When setting the primary font stack, apply it to the Pure grid units along
 with `html`, `button`, `input`, `select`, and `textarea`. Pure Grids use
 specific font stacks to ensure the greatest OS/browser compatibility.
 */
-html, button, input, select, textarea,
+html,
+button,
+input,
+select,
+textarea,
 .MJXc-TeX-unknown-R,
 .pure-g [class*="pure-u"] {
   /* Set your content font stack here: */
   font-family: "PingFangSC-Regular", Helvetica, "Helvetica Neue", "Segoe UI", "Hiragino Sans GB", "Source Han Sans CN", "Microsoft YaHei", "STHeiti", "WenQuanYi Micro Hei", sans-serif !important; }
+
+.pure-g {
+  padding-top: 200px; }
 
 body {
   background-color: #FFF;
@@ -34,7 +41,8 @@ body {
   padding-right: 50px;
   padding-top: 20px; }
 
-a, button.submit {
+a,
+button.submit {
   color: #6E7173;
   text-decoration: none;
   -webkit-transition: all .1s ease-in;
@@ -42,7 +50,8 @@ a, button.submit {
   -o-transition: all .1s ease-in;
   transition: all .1s ease-in; }
 
-a:hover, a:active {
+a:hover,
+a:active {
   color: #444; }
 
 a:focus {
@@ -55,12 +64,17 @@ div {
   box-sizing: border-box; }
 
 #header {
-  padding: 58px 0 0;
+  min-height: 200px;
+  box-sizing: border-box;
+  background: #fff;
+  z-index: 99;
+  width: 100%;
   text-align: left;
   border-bottom: 1px solid #ddd;
-  position: relative; }
+  position: fixed; }
   #header .site-name {
-    margin-bottom: 40px; }
+    margin: 60px 0 20px 0;
+    height: 80px; }
     #header .site-name h1 {
       padding: 0;
       margin: 0;
@@ -75,11 +89,11 @@ div {
       margin: .2em 0 0;
       color: #999; }
   #header #nav-menu {
-    margin: 10px 0 -1px;
+    min-height: 40px;
     padding: 0;
-    position: absolute;
+    position: relative;
     right: 0;
-    bottom: 0; }
+    bottom: -3px; }
     #header #nav-menu a {
       display: inline-block;
       padding: 3px 20px 3px;
@@ -262,22 +276,27 @@ div {
       padding: 0.5em 0;
       margin: auto;
       display: block; }
-    .post .post-content ul, .post .post-content ol {
+    .post .post-content ul,
+    .post .post-content ol {
       border-radius: 3px;
       margin: 1em 0; }
-      .post .post-content ul ul, .post .post-content ol ul {
+      .post .post-content ul ul,
+      .post .post-content ol ul {
         margin: 0; }
-      .post .post-content ul code, .post .post-content ol code {
+      .post .post-content ul code,
+      .post .post-content ol code {
         display: inline-block;
         margin: 0 5px;
         padding: 0px 5px;
         background: #f7f8f8;
         font-family: Menlo, Consolas, monospace !important; }
-      .post .post-content ul a, .post .post-content ol a {
+      .post .post-content ul a,
+      .post .post-content ol a {
         color: #01579f;
         padding-bottom: 2px;
         word-break: normal; }
-        .post .post-content ul a:hover, .post .post-content ol a:hover {
+        .post .post-content ul a:hover,
+        .post .post-content ol a:hover {
           text-decoration: underline; }
   .post .tags {
     padding-bottom: 1em; }
@@ -298,25 +317,31 @@ div {
   .page-navigator .page-number {
     display: inline-block;
     margin: 0 5px 5px 0; }
-  .page-navigator a, .page-navigator span {
+  .page-navigator a,
+  .page-navigator span {
     display: inline-block;
     height: 25px;
     line-height: 25px;
     padding: 5px 9px;
     border: 1px solid #DDD;
     text-align: center; }
-    .page-navigator a:hover, .page-navigator span:hover {
+    .page-navigator a:hover,
+    .page-navigator span:hover {
       background: #F8F8F8;
       border-bottom-color: #D26911; }
-    .page-navigator a.prev, .page-navigator span.prev {
+    .page-navigator a.prev,
+    .page-navigator span.prev {
       float: left; }
-      .page-navigator a.prev:before, .page-navigator span.prev:before {
+      .page-navigator a.prev:before,
+      .page-navigator span.prev:before {
         font-family: "FontAwesome";
         content: "\f100";
         padding-right: 0.3em; }
-    .page-navigator a.next, .page-navigator span.next {
+    .page-navigator a.next,
+    .page-navigator span.next {
       float: right; }
-      .page-navigator a.next:after, .page-navigator span.next:after {
+      .page-navigator a.next:after,
+      .page-navigator span.next:after {
         font-family: "FontAwesome";
         content: "\f101";
         padding-left: 0.3em; }
@@ -349,7 +374,7 @@ div {
 
 /* for archive page ends*/
 /* middle*/
-@media print, screen and (max-width: 48em) {
+@media print, screen and (max-width: 61em) {
   .body_container {
     padding: 0 30px; }
   .content_container {
@@ -377,7 +402,8 @@ div {
   .content_container {
     padding-right: 0; } }
 
-blockquote, .stressed {
+blockquote,
+.stressed {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   margin: 2.5em 0;
@@ -385,7 +411,8 @@ blockquote, .stressed {
   color: #555;
   border-left: none; }
 
-blockquote::before, .stressed-quote::before {
+blockquote::before,
+.stressed-quote::before {
   content: "\201C";
   display: block;
   font-family: times;
@@ -397,7 +424,9 @@ blockquote::before, .stressed-quote::before {
   margin-left: -50px;
   position: absolute; }
 
-strong, b, em {
+strong,
+b,
+em {
   font-weight: bold; }
 
 pre {
@@ -473,8 +502,10 @@ pre {
   position: relative;
   margin-bottom: 30px; }
 
-#process .timeline-centered::before, #process .timeline-centered::after,
-#process .timeline-centered::before, #process .timeline-centered::after {
+#process .timeline-centered::before,
+#process .timeline-centered::after,
+#process .timeline-centered::before,
+#process .timeline-centered::after {
   content: " ";
   display: table; }
 
@@ -1465,7 +1496,8 @@ em.search-keyword {
   .post-copyright li {
     margin: 8px 0; }
 
-#footer #busuanzi_value_site_pv, #footer #busuanzi_value_site_uv {
+#footer #busuanzi_value_site_pv,
+#footer #busuanzi_value_site_uv {
   font-size: 1em;
   font-style: italic;
   font-weight: bold; }
