--- a/themes/maupassant/layout/page.pug
+++ b/themes/maupassant/layout/page.pug
@@ -3,11 +3,13 @@ block title
   title= page.title + ' | ' + config.title
 block content
   .post
-    h1.post-title= page.title
+    //- h1.page-title= page.title
+    //- 反正是渲染的md文档 ，想加标题在md里加
     .post-content
       != page.content
   if page.donate
       iframe(src='/donate/?AliPayQR=' + theme.donate.alipay_qr + '&WeChatQR=' + theme.donate.wechat_qr + '&GitHub=' + theme.donate.github + '&BTCQR=' + theme.donate.btc_qr + '&BTCKEY='+ theme.donate.btc_key + '&PayPal=' + theme.donate.paypal_url, style='overflow-x:hidden; overflow-y:hidden; border:0xp none #fff; min-height:240px; width:100%;', frameborder='0', scrolling='no')
-  if page.comments
-    include _partial/comments.pug
+  //- if page.comments
+  //-   include _partial/comments.pug
+  //- 取消页面的评论
 
