--- a/themes/maupassant/layout/_partial/footer.pug
+++ b/themes/maupassant/layout/_partial/footer.pug
@@ -7,9 +7,9 @@
   //- a(rel='nofollow', target='_blank', href='https://github.com/pagecho')  Cho.
   if theme.busuanzi == true
     div(id=busuanzi_container_site_pv)
-      span='本站总访问量：pv-' 
-      span#busuanzi_value_site_pv= ' '
-      span='次;   uv-'
+      span='本站总访问量：' 
+      //- span#busuanzi_value_site_pv= ' '
+      span='uv-'
       span#busuanzi_value_site_uv= ' '
-      span='次   ( Data from Busuanzi )'
-  div='Copyright © ' + date(Date.now(), 'YYYY') + ' '
+      span='   ( Data from Busuanzi )'
+  div=' © ' + date(Date.now(), 'YYYY') + ' ScarSu '
