--- a/themes/maupassant/layout/archive.pug
+++ b/themes/maupassant/layout/archive.pug
@@ -19,6 +19,6 @@ block content
             for post in posts
               li
                 span.date= post.date.format('YYYY/MM/DD')
-                a(href=url_for(post.path), title=post.title)
+                a(href=url_for(post.path), title=post.title,target='_blank')
                   +title(post)
   include _partial/paginator.pug
