--- a/themes/maupassant/layout/post.pug
+++ b/themes/maupassant/layout/post.pug
@@ -6,7 +6,7 @@ block title
 block content
   .post
     h1.post-title= page.title
-    .post-meta= page.date.format('ll')
+    .post-meta= page.date.format(config.date_format)
       if page.categories.length > 0
         span= ' | '
         span.category
