--- a/themes/maupassant/layout/post.pug
+++ b/themes/maupassant/layout/post.pug
@@ -20,7 +20,7 @@ html(lang=config.language)
 
   body: .body_container
     
-  .post
+  .realPost
     h1.post-title= page.title
     .post-meta= page.date.format(config.date_format)
       if page.categories.length > 0
