--- a/themes/maupassant/source/css/style.scss
+++ b/themes/maupassant/source/css/style.scss
@@ -215,6 +215,172 @@ div {
 }
 
 .post {
+    margin: 20px 20px;
+    padding: 25px 0 15px;
+    .post-title {
+        margin: 0;
+        color: #555;
+        text-align: left;
+        font: bold 25px/1.1 "ff-tisa-web-pro", Cambria, "Times New Roman", Georgia, Times, sans-serif;
+        a {
+            color: #555;
+        }
+    }
+    .post-meta {
+        padding: 0;
+        margin: 15px 0 0;
+        color: #6E7173;
+        float: left;
+        display: inline;
+        text-indent: .15em;
+        &:before {
+            font-family: "FontAwesome";
+            content: "\f073";
+            padding-right: 0.3em;
+        }
+        .category {
+            &:before {
+                font-family: "FontAwesome";
+                content: "\f07c";
+                padding-right: 0.3em;
+            }
+        }
+        #busuanzi_value_page_pv {
+            &:before {
+                font-family: "FontAwesome";
+                content: "\f024";
+                padding-right: 0.3em;
+            }
+        }
+    }
+    .ds-thread-count {
+        padding: 0;
+        margin: 15px 0 0;
+        color: #6E7173;
+        float: right;
+        display: inline;
+        text-indent: .15em;
+        &:before {
+            font-family: "FontAwesome";
+            content: "\f0e5";
+            padding-right: 0.3em;
+        }
+        &:hover {
+            color: #444;
+        }
+    }
+    .disqus-comment-count {
+        padding: 0;
+        margin: 15px 0 0;
+        color: #6E7173;
+        float: right;
+        display: inline;
+        text-indent: .15em;
+        &:before {
+            font-family: "FontAwesome";
+            content: "\f0e5";
+            padding-right: 0.3em;
+        }
+        &:hover {
+            color: #444;
+        }
+    }
+    .post-content {
+        clear: left;
+        font-size: 15px;
+        line-height: 1.77;
+        color: #444;
+        padding-top: 15px;
+        text-align: justify;
+        text-justify: distribute;
+        word-break: normal;
+        h2 {
+            margin: 1.4em 0 1.1em;
+            border-bottom: 1px solid #eee;
+            overflow: hidden;
+        }
+        h3 {
+            margin: 1.4em 0 1.1em;
+        }
+        pre code {
+            padding: 0 2em;
+        }
+        p {
+            margin: 0 0 1.234em;
+            code {
+                display: inline-block;
+                margin: 0 5px;
+                padding: 0 5px;
+                background: #f7f8f8;
+                font-family: Menlo, Consolas, monospace !important;
+            }
+            a {
+                color: #01579f;
+                padding-bottom: 2px;
+                word-break: normal;
+                &:hover {
+                    text-decoration: underline;
+                }
+            }
+        }
+        .caption {
+            color: #444;
+            display: block;
+            font-size: 0.9em;
+            margin-top: 0.1em;
+            position: relative;
+            text-align: center;
+        }
+        hr {
+            margin: 2.4em auto;
+            border: none;
+            border-top: 1px solid #eee;
+            position: relative;
+        }
+        img {
+            max-width: 100%;
+            padding: 0.5em 0;
+            margin: auto;
+            display: block;
+        }
+        ul,
+        ol {
+            border-radius: 3px;
+            margin: 1em 0;
+            ul {
+                margin: 0;
+            }
+            code {
+                display: inline-block;
+                margin: 0 5px;
+                padding: 0px 5px;
+                background: #f7f8f8;
+                font-family: Menlo, Consolas, monospace !important;
+            }
+            a {
+                color: #01579f;
+                padding-bottom: 2px;
+                word-break: normal;
+                &:hover {
+                    text-decoration: underline;
+                }
+            }
+        }
+    }
+    .tags {
+        padding-bottom: 1em;
+        a {
+            margin-right: .5em;
+            &:before {
+                font-family: "FontAwesome";
+                content: "\f0c6";
+                padding-right: 0.3em;
+            }
+        }
+    }
+}
+
+.realPost {
     margin: 20px 150px;
     padding: 25px 0 15px;
     .post-title {
