--- a/themes/maupassant/layout/_partial/footer.pug
+++ b/themes/maupassant/layout/_partial/footer.pug
@@ -13,3 +13,7 @@
       span#busuanzi_value_site_uv= ' '
       span='   ( Data from Busuanzi )'
   div=' © ' + date(Date.now(), 'YYYY') + ' ScarSu '
+  div=' Powered By Hexo·Theme Maupassant '
+  span#blog-timer
+    i(class='fa fa-clock-o')
+    span.desc=''
