--- a/themes/maupassant/layout/_partial/head.pug
+++ b/themes/maupassant/layout/_partial/head.pug
@@ -5,7 +5,13 @@ head
     meta(content='black-translucent', name='apple-mobile-web-app-status-bar-style')
     meta(content='telephone=no', name='format-detection')
     meta(name='description', content=config.description)
+    meta(http-equiv="x-dns-prefetch-control",content="on")
     block title
+    link(rel='stylesheet', type='text/css', href=url_for(theme.css) + '/style.css' + '?v=' + theme.version)
+    link(rel="dns-prefetch",href="//cdn.bootcss.com")
+    link(rel="dns-prefetch",href="//hm.baidu.com")
+    link(rel="dns-prefetch",href="//scarsu.disqus.com")
+    link(rel="dns-prefetch",href="//disqus.com")
     link(rel='stylesheet', type='text/css', href=url_for(theme.css) + '/style.css' + '?v=' + theme.version)
     link(rel='stylesheet', type='text/css', href='//cdn.bootcss.com/normalize/8.0.0/normalize.min.css')
     link(rel='stylesheet', type='text/css', href='//cdn.bootcss.com/pure/1.0.0/pure-min.css')
