--- a/themes/maupassant/layout/_partial/head.pug
+++ b/themes/maupassant/layout/_partial/head.pug
@@ -4,6 +4,7 @@ head
     meta(content='yes', name='apple-mobile-web-app-capable')
     meta(content='black-translucent', name='apple-mobile-web-app-status-bar-style')
     meta(content='telephone=no', name='format-detection')
+    meta(name='shenma-site-verification',content='73d66d89406be7dd17f96fbd40a41575_1576154639')
     meta(name='description', content=config.description)
     meta(http-equiv="x-dns-prefetch-control",content="on")
     block title
