update(blog_history about SEO)

--- a/themes/maupassant/layout/_partial/head.pug
+++ b/themes/maupassant/layout/_partial/head.pug
@@ -5,6 +5,7 @@ head
     meta(content='black-translucent', name='apple-mobile-web-app-status-bar-style')
     meta(content='telephone=no', name='format-detection')
     meta(name='shenma-site-verification',content='8ea86388f85732d2ce7e215862f3c356_1576569153')
+    meta(name='google-site-verification',content='fhrZMgX6WGPdkyr1jm0fIl-SEuzQj6Zm_WZt8koEMOA')
     meta(name='description', content=config.description)
     meta(http-equiv="x-dns-prefetch-control",content="on")
     block title
