增加暗色模式

--- a/themes/maupassant/layout/base.pug
+++ b/themes/maupassant/layout/base.pug
@@ -23,13 +23,15 @@ html(lang=config.language)
       .site-name
         h1.hidden= current_title
         img#logo_profile_photo(src='/images/profile.jpg')
-        a#logo(href=url_for('.'))= config.title
-        .description
+        div.right
+          a#logo(href=url_for('.'))= config.title
           span.subtitle=config.subtitle
           - for (var i in theme.headLinks)
             .head-link
               i(class='fa '+theme.headLinks[i].icon)
               a(href=theme.headLinks[i].url title=theme.headLinks[i].title target='_blank') #{theme.headLinks[i].title}
+          input#lighter-btn(type='checkbox',name='lighter-btn')
+          label.lighter-btn(for='lighter-btn',title='暗黑模式开关')
       #nav-menu
         - for (var i in theme.menu)
           +a_with_current(theme.menu[i].directory, __(theme.menu[i].page), theme.menu[i].icon)
