--- a/themes/maupassant/layout/_partial/helpers.pug
+++ b/themes/maupassant/layout/_partial/helpers.pug
@@ -10,6 +10,9 @@ mixin a_with_current(href, content, id)
   else if (href == 'archives/' && is_category())
     a.current(href=url)
       i(class='fa' + ' ' + id)= ' ' + content
+  else if (href == 'atom.xml')
+    a(href=url,target='_blank')
+      i(class='fa' + ' ' + id)= ' ' + content
   else
     a(href=url)
       i(class='fa' + ' ' + id)= ' ' + content
