--- a/themes/maupassant/source/css/style.scss
+++ b/themes/maupassant/source/css/style.scss
@@ -746,8 +746,12 @@ div {
   .post-content {
     padding-top: 0;
     padding-bottom: 10px;
-    font-size: 0.9em;
+    font-size: 0.6em;
     color: #929292;
+  }
+  li a{
+    color: #333;
+    font-weight: 700;
   }
 }
 
