[FIX]window.onload覆盖导致计时器失效问题

--- a/themes/maupassant/layout/_partial/footer.pug
+++ b/themes/maupassant/layout/_partial/footer.pug
@@ -17,26 +17,26 @@
   span#blog-timer
     i(class='fa fa-clock-o')
     span.desc=''
-script.
-      window.onload=function(){
-        if(localStorage.getItem("theme-dark") === "true"){
+  script.
+    window.addEventListener('load',function(){
+      if(localStorage.getItem("theme-dark") === "true"){
+        //暗黑模式
+        $("body").addClass("dark-theme")
+        $("#lighter-btn+label").click()
+      }else{
+        //普通模式
+        $("body").removeClass("dark-theme")
+      }
+
+      $("#lighter-btn+label").click(function(e){
+        if(!$("#lighter-btn")[0].checked){
           //暗黑模式
           $("body").addClass("dark-theme")
-          $("#lighter-btn+label").click()
+          localStorage.setItem("theme-dark","true")
         }else{
           //普通模式
           $("body").removeClass("dark-theme")
+          localStorage.setItem("theme-dark","false")
         }
-
-        $("#lighter-btn+label").click(function(e){
-          if(!$("#lighter-btn")[0].checked){
-            //暗黑模式
-            $("body").addClass("dark-theme")
-            localStorage.setItem("theme-dark","true")
-          }else{
-            //普通模式
-            $("body").removeClass("dark-theme")
-            localStorage.setItem("theme-dark","false")
-          }
-        });
-      }
+      });
+    });
