--- a/themes/maupassant/source/css/style.scss
+++ b/themes/maupassant/source/css/style.scss
@@ -750,8 +750,56 @@ div {
     color: #929292;
   }
   li a{
-    color: #333;
-    font-weight: 700;
+    // color: #333;
+    // font-weight: 700;
+  }
+  li .post-desc-icon{
+    margin-left: 10px;
+    color: #888;
+    cursor: pointer;
+  }
+  li .popup{
+    display:none;
+    width: 250px;
+    padding: 10px;
+    font-size: 12px;
+    line-height: 14px;
+    position: absolute;
+    // display: inline;
+    background: #fff;
+    color: #555;
+    border: 1px solid #999;
+    margin-left: 10px;
+    border-radius: 10px;
+    box-sizing: border-box;
+    // transition: width 0.2s;
+    // -moz-transition: width 0.2s; /* Firefox 4 */
+    // -webkit-transition: width 0.2s; /* Safari 和 Chrome */
+    // -o-transition: width 0.2s; /* Opera */
+    &:before {
+      content: '';
+      width: 0;
+      display: block;
+      height: 0;
+      border-right: 6px solid #999;
+      border-top: 6px solid transparent;
+      border-bottom: 6px solid transparent;
+      position: absolute;
+      left: -6px;
+    }
+    &::after{
+      // 上 
+      content: '';
+      width: 0;
+      display: block;
+      height: 0;
+      border-right: 6px solid #fff;
+      border-top: 6px solid transparent;
+      border-bottom: 6px solid transparent;
+      position: absolute;
+      left: -5px;
+      top: 10px;
+    }
   }
 }
 
