--- a/themes/maupassant/source/css/style.scss
+++ b/themes/maupassant/source/css/style.scss
@@ -94,6 +94,12 @@ body {
       background-color: #444;
       border-bottom-color: #fff;
     }
+    .post-archive {
+      li a{
+        color: #ccc;
+        // font-weight: 700;
+      }
+    }
   }
 }
 
