add baidu site analytics

--- a/themes/maupassant/layout/_partial/head.pug
+++ b/themes/maupassant/layout/_partial/head.pug
@@ -32,6 +32,7 @@ head
     meta(name="twitter:title",content="ScarSu - 风雨无阻自律的前端程序媛 | 不要标榜，去行动")
     meta(name="twitter:description",content="ScarSu - 风雨无阻自律的前端程序媛 | 不要标榜，去行动")
     meta(name="twitter:image:src",content="https://www.scarsu.com/images/profile.jpg")
+    meta(name="baidu-site-verification",content="uxyDbKm0f0")
 
     block title
     link(rel='stylesheet', type='text/css', href=url_for(theme.css) + '/style.css' + '?v=' + theme.version)
