change meta data

--- a/themes/maupassant/layout/_partial/head.pug
+++ b/themes/maupassant/layout/_partial/head.pug
@@ -9,18 +9,18 @@ head
     meta(name='description', content=config.description)
     meta(http-equiv="x-dns-prefetch-control",content="on")
     
-    meta(name="dc.title",content="ScarSu - 风雨无阻自律的前端程序媛 | 不要标榜，去行动")
-    meta(name="dc.description",content="ScarSu - 风雨无阻自律的前端程序媛 | 不要标榜，去行动")
+    meta(name="dc.title",content="ScarSu - 不要标榜，去行动😃 | 前端 & 自律")
+    meta(name="dc.description",content="ScarSu - 不要标榜，去行动😃 | 前端 & 自律")
     meta(name="dc.relation",content="https://www.scarsu.com/")
     meta(name="dc.source",content="https://www.scarsu.com/")
     meta(name="dc.language",content="zh_CN")
-    meta(name="description",content="ScarSu - 风雨无阻自律的前端程序媛 | 不要标榜，去行动")
+    meta(name="description",content="ScarSu - 不要标榜，去行动😃 | 前端 & 自律")
     meta(property="og:url",content="https://www.scarsu.com/")
     meta(property="og:site_name",content="ScarSu")
     meta(property="og:locale",content="zh_CN")
     meta(property="og:type",content="website")
-    meta(property="og:title",content="ScarSu - 风雨无阻自律的前端程序媛 | 不要标榜，去行动")
-    meta(property="og:description",content="ScarSu - 风雨无阻自律的前端程序媛 | 不要标榜，去行动")
+    meta(property="og:title",content="ScarSu - 不要标榜，去行动😃 | 前端 & 自律")
+    meta(property="og:description",content="ScarSu - 不要标榜，去行动😃 | 前端 & 自律")
     meta(property="og:image",content="https://www.scarsu.com/images/profile.jpg")
     meta(property="og:image:secure_url",content="https://www.scarsu.com/images/profile.jpg")
     meta(property="og:image:width",content="1080")
@@ -29,8 +29,8 @@ head
     meta(name="twitter:card",content="summary_large_imag")
     meta(name="twitter:site",content="@ScarSu001")
     meta(name="twitter:creator",content="@ScarSu001")
-    meta(name="twitter:title",content="ScarSu - 风雨无阻自律的前端程序媛 | 不要标榜，去行动")
-    meta(name="twitter:description",content="ScarSu - 风雨无阻自律的前端程序媛 | 不要标榜，去行动")
+    meta(name="twitter:title",content="ScarSu - 不要标榜，去行动😃 | 前端 & 自律")
+    meta(name="twitter:description",content="ScarSu - 不要标榜，去行动😃 | 前端 & 自律")
     meta(name="twitter:image:src",content="https://www.scarsu.com/images/profile.jpg")
     meta(name="baidu-site-verification",content="uxyDbKm0f0")
 
