update deprecate global filter for dark mode & change slogan

--- a/themes/maupassant/layout/_partial/footer.pug
+++ b/themes/maupassant/layout/_partial/footer.pug
@@ -20,11 +20,11 @@
   script.
     if(localStorage.getItem("theme-dark") === "true"){
       //暗黑模式
-      $("html").addClass("dark-theme")
+      $("body").addClass("dark-theme")
       $("#lighter-btn+label").click()
     }else{
       //普通模式
-      $("html").removeClass("dark-theme")
+      $("body").removeClass("dark-theme")
     }
     window.addEventListener('load',function(){
 
@@ -39,11 +39,11 @@
       $("#lighter-btn+label").click(function(e){
         if(!$("#lighter-btn")[0].checked){
           //暗黑模式
-          $("html").addClass("dark-theme")
+          $("body").addClass("dark-theme")
           localStorage.setItem("theme-dark","true")
         }else{
           //普通模式
-          $("html").removeClass("dark-theme")
+          $("body").removeClass("dark-theme")
           localStorage.setItem("theme-dark","false")
         }
       });
