--- a/themes/maupassant/source/css/style.scss
+++ b/themes/maupassant/source/css/style.scss
@@ -42,11 +42,6 @@ h6 {
     "Microsoft Yahei", sans-serif;
 }
 
-html{
-  &.dark-theme {
-    filter: invert(80%) hue-rotate(200deg)
-  }
-}
 body {
   background-color: #fff;
   color: #444;
@@ -56,70 +51,92 @@ body {
   -moz-osx-font-smoothing: grayscale;
   font-size: 14px;
   &.dark-theme {
-    // filter: invert(80%) hue-rotate(200deg)
-    // background-color: #292a2d;
-    // color: #a9a9b3;
-    // transition: all 0.2s ease;
-    // & *,
-    // #header {
-    //   background-color: #292a2d;
-    //   color: #a9a9b3;
-    //   transition: all 0.2s ease;
-    // }
-    // #header {
-    //   border-color: #eee;
-    //   .site-name #logo {
-    //     color: #ddd;
-    //   }
-    //   #nav-menu a {
-    //     border-bottom-color: #a9a9b3;
-    //     &:hover {
-    //       border-bottom-color: #fff;
-    //     }
-    //     &.current {
-    //       border-bottom-color: #292a2d;
-    //     }
-    //   }
-    // }
-    // a,
-    // .post .post-content ul a,
-    // .post .post-content ol a
-    // {
-    //   color:#ccc;
-    // }
-    // a:hover,
-    // a:active {
-    //   color: #eee;
-    // }
-    // #sidebar .widget .search-form input {
-    //   background-color: #292a2d;
-    //   color: #a9a9b3;
-    //   border-color: #a9a9b3;
-    // }
-    // .post .post-content {
-    //   color: #a9a9b3;
-    // }
-    // .post .post-title,
-    // .post .post-title a {
-    //   color: #bbb;
-    // }
-    // .post .post-title:hover,
-    // .post .post-title a:hover {
-    //   color: #eee;
-    // }
-    // .readmore a {
-    //   color: #eee;
-    // }
-    // .readmore a:hover {
-    //   background-color: #444;
-    //   border-bottom-color: #fff;
-    // }
-    // .post-archive {
-    //   li a {
-    //     color: #ccc;
-    //     // font-weight: 700;
-    //   }
-    // }
+    background-color: #292a2d;
+    color: #a9a9b3;
+    transition: all 0.2s ease;
+    & *,
+    #header {
+      background-color: #292a2d;
+      color: #a9a9b3;
+      transition: all 0.2s ease;
+    }
+    #header {
+      border-color: #eee;
+      .site-name #logo {
+        color: #ddd;
+      }
+      #nav-menu a {
+        border-bottom-color: #a9a9b3;
+        &:hover {
+          border-bottom-color: #fff;
+        }
+        &.current {
+          border-bottom-color: #292a2d;
+        }
+      }
+    }
+    a,
+    .post .post-content ul a,
+    .post .post-content ol a
+    {
+      color:#ccc;
+    }
+    a:hover,
+    a:active {
+      color: #eee;
+    }
+    #sidebar .widget .search-form input {
+      background-color: #292a2d;
+      color: #a9a9b3;
+      border-color: #a9a9b3;
+    }
+    .post .post-content {
+      color: #a9a9b3;
+    }
+    .post .post-title,
+    .post .post-title a {
+      color: #bbb;
+    }
+    .post .post-title:hover,
+    .post .post-title a:hover {
+      color: #eee;
+    }
+    .readmore a {
+      color: #eee;
+    }
+    .readmore a:hover {
+      background-color: #444;
+      border-bottom-color: #fff;
+    }
+    .post-archive {
+      li a {
+        color: #ccc;
+        // font-weight: 700;
+      }
+    }
+    .realPost{
+      h1.post-title {
+        color:#d8d8d8;
+      }
+      .post-content ul code,
+      .post-content p code,
+      .post-content ol code{
+        background-color:#474c4c;
+        color:#e1911b;
+      }
+      figure.highlight,
+      figure .gutter pre span,
+      .codeblock,
+      figure.highlight .gutter,
+      .codeblock .gutter{
+        background: #474c4c;
+      }
+      .gitment-editor-tab.gitment-selected,
+      .gitment-editor-body textarea{
+        background-color: #292a2d;
+        color: #a9a9b3;
+      }
+    }
   }
 }
 
